[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/terrain/map_terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/environment/main_environment.tres" type="Environment" id=2]
[ext_resource path="res://game/gui/2d/girassol_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://game/gui/3d/scenario_editor/scenario_editor.gd" type="Script" id=4]
[ext_resource path="res://game/terrain/trees/tree_model.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/util/model_boss.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/gui/2d/pawn_editor/pawn_editor.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/state/pawn.gd" type="Script" id=8]

[sub_resource type="Resource" id=1]
script = ExtResource( 8 )
might = 0
will = 0
magic = 0
race = "Dorv"
character_name = "Brinny the Drunk"
location = "35,30"

[node name="ScenarioEditor" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
map_terrain_path = NodePath("HSplitContainer/VBoxContainer/MarginContainer/CenterContainer/ViewportContainer/Viewport/MapTerrain")
camera_path = NodePath("HSplitContainer/VBoxContainer/MarginContainer/CenterContainer/ViewportContainer/Viewport/Camera")
environment_control_path = NodePath("HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainStyle/VBoxContainer/ItemList")
map_size_control_path = NodePath("HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSize/VBoxContainer/ItemList")
terrain_seed_control_path = NodePath("HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed/VBoxContainer/LineEdit")
forest_seed_control_path = NodePath("HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed/VBoxContainer/LineEdit")
pawn_editors_path = NodePath("HSplitContainer/MarginContainer/VBoxContainer/PawnEditors")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 5
dragger_visibility = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
margin_right = 492.0
margin_bottom = 600.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 482.0
margin_bottom = 590.0

[node name="Header" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_right = 472.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/Header"]
margin_right = 472.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Scenario"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/MarginContainer/VBoxContainer/Header"]
margin_top = 43.0
margin_right = 472.0
margin_bottom = 53.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 472.0
margin_bottom = 77.0
custom_constants/separation = 10
alignment = 1

[node name="Label2" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 7.0
margin_top = 3.0
margin_right = 117.0
margin_bottom = 17.0
text = "Scenario File.tres"

[node name="Button" type="Button" parent="HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 127.0
margin_right = 200.0
margin_bottom = 20.0
text = "Save As..."

[node name="Button2" type="Button" parent="HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 210.0
margin_right = 343.0
margin_bottom = 20.0
text = "Overwrite Scenario"

[node name="Button3" type="Button" parent="HSplitContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 353.0
margin_right = 465.0
margin_bottom = 20.0
text = "Load Scenario..."

[node name="Header2" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 472.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/Header2"]
margin_right = 472.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Map"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/MarginContainer/VBoxContainer/Header2"]
margin_top = 43.0
margin_right = 472.0
margin_bottom = 53.0
custom_constants/separation = 10

[node name="SettingsGrid" type="GridContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 472.0
margin_bottom = 237.0
custom_constants/vseparation = 16
custom_constants/hseparation = 10
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainStyle" type="MarginContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid"]
margin_right = 115.0
margin_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainStyle"]
margin_right = 115.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainStyle/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Terrain Style:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainStyle/VBoxContainer"]
margin_top = 18.0
margin_right = 115.0
margin_bottom = 81.0
rect_min_size = Vector2( 115, 0 )
items = [ "Core's Edge", null, false, "The Rim Eternal", null, false, "The Voidlands", null, false ]
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainSize" type="MarginContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid"]
margin_left = 125.0
margin_right = 285.0
margin_bottom = 99.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSize"]
margin_right = 160.0
margin_bottom = 99.0

[node name="Label" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSize/VBoxContainer"]
margin_right = 160.0
margin_bottom = 14.0
text = "Terrain Size:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSize/VBoxContainer"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 99.0
rect_min_size = Vector2( 160, 0 )
items = [ "Small (64x64)", null, false, "Medium (128x128)", null, false, "Large (256x256)", null, true, "Humongous (512x512)", null, true ]
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainSeed" type="MarginContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid"]
margin_left = 295.0
margin_right = 378.0
margin_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed"]
margin_right = 83.0
margin_bottom = 99.0

[node name="Label3" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed/VBoxContainer"]
margin_right = 83.0
margin_bottom = 14.0
text = "Terrain Seed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed/VBoxContainer"]
margin_top = 18.0
margin_right = 83.0
margin_bottom = 42.0
align = 2

[node name="Button" type="Button" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed/VBoxContainer"]
margin_top = 46.0
margin_right = 83.0
margin_bottom = 66.0
text = "Reroll"

[node name="ForestSeed" type="MarginContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid"]
margin_left = 388.0
margin_right = 467.0
margin_bottom = 99.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed"]
margin_right = 79.0
margin_bottom = 99.0

[node name="Label3" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed/VBoxContainer"]
margin_right = 79.0
margin_bottom = 14.0
text = "Forest Seed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed/VBoxContainer"]
margin_top = 18.0
margin_right = 79.0
margin_bottom = 42.0
align = 2

[node name="Button" type="Button" parent="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed/VBoxContainer"]
margin_top = 46.0
margin_right = 79.0
margin_bottom = 66.0
text = "Reroll"

[node name="Header3" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 241.0
margin_right = 472.0
margin_bottom = 294.0

[node name="Label" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/Header3"]
margin_right = 472.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Pawns"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/MarginContainer/VBoxContainer/Header3"]
margin_top = 43.0
margin_right = 472.0
margin_bottom = 53.0
custom_constants/separation = 10

[node name="PawnEditors" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 472.0
margin_bottom = 312.0

[node name="PawnEditor" parent="HSplitContainer/MarginContainer/VBoxContainer/PawnEditors" instance=ExtResource( 7 )]
margin_right = 472.0
margin_bottom = 14.0
pawn = SubResource( 1 )

[node name="Header4" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 316.0
margin_right = 472.0
margin_bottom = 369.0

[node name="Label" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/Header4"]
margin_right = 472.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Items"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/MarginContainer/VBoxContainer/Header4"]
margin_top = 43.0
margin_right = 472.0
margin_bottom = 53.0
custom_constants/separation = 10

[node name="Label3" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 373.0
margin_right = 472.0
margin_bottom = 387.0
text = "Loading..."

[node name="Header5" type="VBoxContainer" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 391.0
margin_right = 472.0
margin_bottom = 444.0

[node name="Label" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer/Header5"]
margin_right = 472.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Buildings"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/MarginContainer/VBoxContainer/Header5"]
margin_top = 43.0
margin_right = 472.0
margin_bottom = 53.0
custom_constants/separation = 10

[node name="Label4" type="Label" parent="HSplitContainer/MarginContainer/VBoxContainer"]
margin_top = 448.0
margin_right = 472.0
margin_bottom = 462.0
text = "Loading..."

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 492.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 532.0
margin_bottom = 270.0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 532.0
margin_bottom = 260.0

[node name="ViewportContainer" type="ViewportContainer" parent="HSplitContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 141.0
margin_right = 391.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="HSplitContainer/VBoxContainer/MarginContainer/CenterContainer/ViewportContainer"]
size = Vector2( 250, 250 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="HSplitContainer/VBoxContainer/MarginContainer/CenterContainer/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 32.5, 54.16, 32.5 )
environment = ExtResource( 2 )
far = 150.0

[node name="MapTerrain" parent="HSplitContainer/VBoxContainer/MarginContainer/CenterContainer/ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="ForestBoss" parent="HSplitContainer/VBoxContainer/MarginContainer/CenterContainer/ViewportContainer/Viewport" instance=ExtResource( 6 )]
scene_to_instance = ExtResource( 5 )
resource_name = "forest"
key_method = "hash"

[node name="MarginContainer2" type="MarginContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 532.0
margin_bottom = 362.0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/VBoxContainer/MarginContainer2"]
margin_top = 10.0
margin_right = 532.0
margin_bottom = 78.0

[node name="HExpander" type="Control" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer"]
visible = false
margin_left = 266.0
margin_top = 34.0
margin_right = 266.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer"]
margin_left = 134.0
margin_right = 397.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer"]
margin_right = 59.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 59.0
margin_bottom = 14.0
text = "State"
align = 1

[node name="Label2" type="Label" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 59.0
margin_bottom = 32.0
text = "Pawns"
align = 1

[node name="Label3" type="Label" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 59.0
margin_bottom = 50.0
text = "Items"
align = 1

[node name="Label4" type="Label" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 59.0
margin_bottom = 68.0
text = "Buildings"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer"]
margin_left = 63.0
margin_right = 263.0
margin_bottom = 68.0

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 15.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
text = "Map"
fit_content_height = true

[node name="Label2" type="Label" parent="HSplitContainer/VBoxContainer/MarginContainer2/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 19.0
margin_right = 200.0
margin_bottom = 33.0
text = "Map"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 532.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="StartGameButton" type="Button" parent="HSplitContainer/VBoxContainer/CenterContainer"]
margin_left = 224.0
margin_top = 107.0
margin_right = 307.0
margin_bottom = 127.0
text = "Start Game"

[connection signal="item_selected" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainStyle/VBoxContainer/ItemList" to="." method="environment_selected"]
[connection signal="item_selected" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSize/VBoxContainer/ItemList" to="." method="map_size_selected"]
[connection signal="focus_exited" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed/VBoxContainer/LineEdit" to="." method="terrain_seed_changed"]
[connection signal="text_entered" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed/VBoxContainer/LineEdit" to="." method="terrain_seed_changed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/TerrainSeed/VBoxContainer/Button" to="." method="randomize_terrain_seed"]
[connection signal="focus_exited" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed/VBoxContainer/LineEdit" to="." method="terrain_seed_changed"]
[connection signal="text_entered" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed/VBoxContainer/LineEdit" to="." method="terrain_seed_changed"]
[connection signal="pressed" from="HSplitContainer/MarginContainer/VBoxContainer/SettingsGrid/ForestSeed/VBoxContainer/Button" to="." method="randomize_forest_seed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/CenterContainer/StartGameButton" to="." method="start_game_pressed"]
